Fixed CSS for consistent column gaps, +Batch object support to JS

--- a/Manager/app/static/css/style.css
+++ b/Manager/app/static/css/style.css
@@ -76,7 +76,7 @@ body {
     display: grid;
     grid-auto-flow: column;
     grid-template-rows: 1fr;
-    grid-auto-columns: minmax(300px, 1fr);
+    grid-auto-columns: 280px;
     align-items: start;
     gap: 10px;
     min-height: 70vh;
@@ -153,6 +153,7 @@ h6 {
 .order-batch-card-body {
     display: flex;
     flex-direction: column;
+    justify-items: auto;
     width: 100%;
     gap: 5px;
     flex-grow: 1;
@@ -212,4 +213,5 @@ li {
     list-style: none;
     margin: 0;
     padding: 5px;
+    line-height: 0.7
 }
